# chatpot_rag_practice

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  ISSUES.md  Makefile  README.md  ROAD_MAP.md  SETUP_GUIDE.md  alembic.ini  chroma-config.yaml  docker-compose.yml  pyproject.toml
.claude/: codex-mode
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_pinned_archived.py  0003_add_rag_tables.py  0004_add_document_status.py  0005_add_message_sources.py
backend/: dataModels.py  db.py  deep_research.py  logging_config.py  main.py  models.py  rag.py  schemas.py  tracing.py
backend/config/: __init__.py  settings.py
backend/llm/: __init__.py  bedrock.py  chatModel.py  embedModel.py  ollama.py
backend/vector_db/: __init__.py  chroma.py  opensearch.py  vectorDB.py
docs/: 00_project_goal.md  development_flow.md
docs/design/: phase2-1-bolt-0.md  phase2-1-requirements.md  phase2-2-bolt-0.md  phase2-2-requirements.md  phase3-1-bolt-0.md  phase3-1-requirements.md  phase3-2-bolt-0.md  phase3-2-requirements.md  phase3-3-bolt-0.md  phase3-3-requirements.md  phase4-bolt-0.md  phase4-requirements.md
docs/error/: 20260629-langfuse-trace-not-delivered.md  backend-logging-not-visible-in-docker-logs.md  chromadb-collection-not-visible.md  chromadb-cors-v1x.md  chromadb-embedding-dimension-mismatch.md
docs/implementation/: phase2-1-bolt-0.md  phase2-2-bolt-0.md
docs/phaseSummary/: phase2-1-summary.md  phase2-2-summary.md  phase3-1-summary.md  phase3-2-summary.md  phase3-3-summary.md  phase4-summary.md
docs/review/: phase3-3-bolt-0.md  phase4-bolt-0.md
docs/taskLog/: issue-30.md  phase2-1-bolt-0.md  phase2-2-bolt-0.md  phase3-1-bolt-0.md  phase3-2-bolt-0.md  phase3-3-bolt-0.md  phase4-bolt-0.md
docs/templates/: bolt-design.md  bolt_implementation.md  code_review.md  commit_message.md  error-investigation.md  implementation-report.md  pr_create.md  pr_template.md  requirements.md  summary.md  tasklog.md  worklog.md
frontend/: .dockerignore  Dockerfile  app.py  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  (+2 more)
reference/: ISSUES.md  LEARN_FLOW.md  ROAD_MAP.md  SETUP_GUIDE.md  summary_for_hadout.md
terraform/: .gitignore  main.tf
tmp/worklog/: issue-30.md  phase3-1-bolt-0.md  phase3-2-bolt-0.md  phase3-3-bolt-0.md  phase4-bolt-0.md
(+10 files in other folders)
