[project]
name = "rag-with-claude"
version = "0.1.0"
description = "PoC chatbot: Streamlit x FastAPI x Ollama"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.39.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pypdf>=4.0.0",
    "pdf2image>=1.17.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-ollama>=0.3.0",
    "langchain-community>=0.3.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.6.0",
    "python-multipart>=0.0.9",
    "langfuse>=2.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
