[project]
name = "rag-chat-template"
version = "0.1.0"
description = "RAG 構築学習用テンプレート (FastAPI x Next.js x Ollama x ChromaDB)"
requires-python = ">=3.11"
dependencies = [
    # ── Web / API ──────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",

    # ── DB ─────────────────────────────────────
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",

    # ── PDF / テキスト分割 ──────────────────────
    # 教材として最小限。OCR (pdf2image, ollama vision) は意図的に外している。
    "pypdf>=4.0.0",
    "langchain-text-splitters>=0.3.0",

    # ── LLM ラッパ (LangChain) ─────────────────
    # チャット LLM 呼び出しは LangChain 経由で行う方針。
    # フレームワークの ChatPromptTemplate / Messages / astream に揃えると、
    # 将来 Bedrock 等に差し替えても呼び出し側の流れを変えずに済む。
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",

    # ── ベクトル DB ────────────────────────────
    "chromadb>=0.6.0",

    # ── トレース (任意) ────────────────────────
    "langfuse>=2.0.0",

    # ── 通信 ───────────────────────────────────
    # httpx: 非同期 HTTP (Ollama チャットストリーミング用)
    # requests: 同期 HTTP (Ollama 埋め込み呼び出しなど)
    "httpx>=0.27.0",
    "requests>=2.32.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
